<resources>
    <string name="app_name">MovilProyectoFinal</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="Bienvenido">"Accede a tu cuenta"</string>

    <string name="nombre">Nombre de Usuario</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>
    <string name="pass2">Confirmar Contraseña</string>
    <string name="registro">Registrarme</string>

    <string name="Inicio">Iniciar Sesión</string>
    <string name="sin_cuenta">¿Aún no tienes cuenta?</string>
    <string name="registroAqui">Registrate aqui</string>


<!--Busqueda-->

    <string name="buscarPost">Buscar publicaciones...</string>
    <string name="buscarboton">Buscar</string>
    <string name="titulobusqueda">Encuentra tu Aventura</string>


    <string name="comentario">Comentarios</string>


    <string name="image_description">Describe tu imagen</string>

    <string name="Perfil">Perfil</string>
    <string name="titulo_perfil">Modifica tus datos</string>
    <string name="Filtros">Filtros</string>
    <string name="publicaciones">PUBLICACIONES</string>
    <string name="redsocial">Instagram</string>
    <string name="imagen_description">Describe tu imagen</string>
        <string name="titulo_ppal">Comparte tu aventura</string>

    <string name="titulo_detail">Publicaciones</string>
    <string name="titulo_post">Lugar que Visitaste</string>
    <string name="lugar">Lugar</string>
    <string name="comienzaUnChat">Comunicate</string>
    <string name="cargando">Cargando datos...</string>
    <string name="cargandohome">Cargando los post</string>


    <string name="descripcion">Descripción de tu experiencia...</string>
    <string name="presupuesto">Presupuesto estimado (USD)</string>
    <string name="duracion">Duración del viaje (ej. 3 días)</string>
    <string name="publicar">Publicar</string>
    <string name="actualizar">Actualizar Perfil</string>




    <string name="postPerfil"><u>Tus Post</u></string>
    <string name="gridsub"><u>Subtitulo</u></string>





    // CONFUGURACION DE PARSE Barbara
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">ULn3HdLyheQ1N1OuDTNhhgfNVqVKL8A1t8PRiF5t</string>
    <string name="back4app_client_key">eK291WB2MBJGfslRFfMsTaPRa6UOjnXcC5bxya00</string>

    <string name="title_activity_home">HomeActivity</string>


    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string-array name="categorias_array">
        <!-- Aquí puedes añadir tus categorías -->
        <item>Naturaleza</item>
        <item>Montaña</item>
        <item>Aventura</item>
        <item>Cultura</item>
        <item>Playa</item>
    </string-array>





</resources>