<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.fragments.LogueoTabFragment">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:padding="20dp" >


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/login_image_uno" />


            <EditText

                android:id="@+id/itUsuario"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/mail"
                android:hint="@string/email"
                android:padding="8dp" />


            <EditText

                android:id="@+id/itPassword"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittext_bkg"
                android:drawableLeft="@drawable/candado_login"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:padding="8dp" />


            <Button
                android:id="@+id/btLogin"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/Inicio"
                android:textSize="18sp"
                app:cornerRadius="20dp" />


        </LinearLayout>
    </LinearLayout>




</LinearLayout>